--- a/build.gradle
+++ b/build.gradle
@@ -46,3 +46,18 @@ task clean(type: Delete) {
         tempAssets.deleteDir()
     }
 }
+
+buildscript {
+    repositories {
+        jcenter()
+        maven {
+            url 'https://maven.google.com'
+        }
+    }
+    dependencies {
+        classpath 'com.android.tools.build:gradle:3.0.0-alpha4'
+
+        // NOTE: Do not place your application dependencies here; they belong
+        // in the individual module build.gradle files
+    }
+}
